--- a/public/styles/taskbar.css
+++ b/public/styles/taskbar.css
@@ -22,6 +22,7 @@
     width: 100%;
     height: 72px;
     background-color: #eed9a7;
+    position: fixed;
 }
 
 #left-taskbar{
@@ -119,7 +120,10 @@
   .list-item a {
     display: flex;
     text-decoration: none; 
+  }
 
+  .list-item a:hover{
+    background-color: #E0C27B;
   }
 
 .list-item a div {
