--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,5 +11,13 @@
 </head>
 <body>
     <%- include('partials/taskbar') %>
+    <div class="home-container">
+        <h1 class="amiri-bold home-header hide">Your Books, Your Notes</h1>
+        <p class="amiri-regular hide">Whether reading for fun or for school it's always good to collect your thoughts.<br/>
+        Search for your favorite books from the OpenLibrary catalogue and start taking your chapter notes now.<br/>
+        Leave a rating so you can remember which books are worth rereading and forget those that aren't
+        </p>
+    </div>
+    <script src="/js/taskbar.js"></script>
 </body>
 </html>
