--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,7 @@
         <button class="amiri-regular btn-log" id="btn-register">Register</button>
         <div class="form-popup" id="reg-popup">
             <form class="form-container" id="register-form">
-                <h3>Register</h3>
+                <h3 class="amiri-bold">Register</h3>
                 <label class="amiri-regular" for="register-email">Email</label>
                 <input class="amiri-regular" type="text" name="email" id="register-email" autocomplete="off" required>
                 <label class="amiri-regular" for="register-password">Password</label>
