--- a/views/partials/taskbar.ejs
+++ b/views/partials/taskbar.ejs
@@ -17,7 +17,9 @@
         </div>
         <div id="right-taskbar">
             <div class="search-and-suggest">
-                <input id="small-search" type="text" autocomplete="off">
+                <form id="search-form">
+                    <input id="small-search" type="text" autocomplete="off" name="query">
+                </form>
                 <div class="search-results">
                     <ul id="search-list"></ul>
                 </div>
