--- a/views/partials/taskbar.ejs
+++ b/views/partials/taskbar.ejs
@@ -13,7 +13,7 @@
     <div id="taskbar">
         <div id="left-taskbar">
             <a class="change-page amiri-bold" href="">About</a>
-            <a class="change-page amiri-bold" href="">Favorites</a>
+            <a class="change-page amiri-bold" href="/favorites">Favorites</a>
         </div>
         <div id="right-taskbar">
             <div class="search-and-suggest">
